--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -68,19 +68,20 @@ body {
 .btn-toggle {
     padding: .25rem .5rem;
     font-weight: 600;
-    color: var(--bs-emphasis-color);
+    color: white !important;
     background-color: transparent;
   }
   .btn-toggle:hover,
   .btn-toggle:focus {
-    color: rgba(var(--bs-emphasis-color-rgb), .85);
-    background-color: var(--bs-tertiary-bg);
+    color: white;
+    background-color: rgb(227,48,111);
   }
   
   .btn-toggle::before {
     width: 1.25em;
     line-height: 0;
-    content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
+    content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' height='1em' viewBox='0 0 320 512'%3e%3cstyle%3esvg%7bfill:%23ffffff%7D%3c/style%3e%3cpath d='M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z'/%3e%3c/svg%3e");
+
     transition: transform .35s ease;
     transform-origin: .5em 50%;
   }
@@ -100,10 +101,12 @@ body {
     padding: .1875rem .5rem;
     margin-top: .125rem;
     margin-left: 1.25rem;
+    color:white !important;
   }
   .btn-toggle-nav a:hover,
   .btn-toggle-nav a:focus {
-    background-color: var(--bs-tertiary-bg);
+    background-color: rgb(227,48,111);
+    color: white !important;
   }
   
   .scrollarea {
